compiler/lib/test/parser_golden/module_call_before_import.golden
ERROR: test.act:2:1:
  |
2 | import math
  | ^
unexpected 'i'
expecting end of input, end of line, or statement
